# Concordo

./: CMakeLists.txt  Doxyfile  README.md  Servers.txt  Users.txt  script.txt  scriptInvalid.txt  scriptValid.txt
docs/html/: Channel_8h_source.html  Message_8h_source.html  Server_8h_source.html  System_8h_source.html  TextChannel_8h_source.html  User_8h_source.html  VoiceChannel_8h_source.html  annotated.html  classChannel-members.html  classChannel.html  classChannel__coll__graph.map  classChannel__coll__graph.md5  classChannel__inherit__graph.map  classChannel__inherit__graph.md5  classMessage-members.html  classMessage.html  classMessage__coll__graph.map  classMessage__coll__graph.md5  classServer-members.html  classServer.html  classServer__coll__graph.map  classServer__coll__graph.md5  classSystem-members.html  classSystem.html  classSystem__coll__graph.map  classSystem__coll__graph.md5  classTextChannel-members.html  classTextChannel.html  classTextChannel__coll__graph.map  classTextChannel__coll__graph.md5  classTextChannel__inherit__graph.map  classTextChannel__inherit__graph.md5  classUser-members.html  classUser.html  classUser__coll__graph.map  classUser__coll__graph.md5  classVoiceChannel-members.html  classVoiceChannel.html  classVoiceChannel__coll__graph.map  classVoiceChannel__coll__graph.md5  (+32 more)
docs/latex/: annotated.tex  classChannel.tex  classChannel__coll__graph.md5  classChannel__inherit__graph.md5  classMessage.tex  classMessage__coll__graph.md5  classServer.tex  (+14 more)
include/: Channel.h  Message.h  Server.h  System.h  TextChannel.h  User.h  VoiceChannel.h
(+63 files in other folders)
